feat(pa2): ransac implement

--- a/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
+++ b/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(37936, 128)\n",
+      "(37935, 128)\n",
       "[[  1.   0.   0. ...   1.   7.   7.]\n",
       " [  3.   1.   2. ...   3.   1.   1.]\n",
       " [  0.   1.   2. ...   0.   0.   0.]\n",
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1893\n"
+      "1895\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,33 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  24.099752, 3219.431   ],\n",
-       "       [ 298.76065 , 2282.336   ],\n",
-       "       [ 330.07364 , 2516.3718  ],\n",
-       "       ...,\n",
-       "       [4551.96    , 3080.2961  ],\n",
-       "       [4573.4385  , 3094.0754  ],\n",
-       "       [4574.8506  , 2760.8474  ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1895, 2)\n",
+      "(1895, 2)\n"
+     ]
     }
    ],
    "source": [
-    "p1"
+    "print(p1.shape)\n",
+    "p1 = np.array(p1).reshape(-1,2)\n",
+    "print(p1.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +164,33 @@
     "    b = b.reshape((length),3)\n",
     "\n",
     "    return a,b\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.40997543e+01, 3.21943091e+03, 1.00000000e+00],\n",
+       "       [2.98760559e+02, 2.28233594e+03, 1.00000000e+00],\n",
+       "       [3.30073669e+02, 2.51637183e+03, 1.00000000e+00],\n",
+       "       ...,\n",
+       "       [4.55195996e+03, 3.08029614e+03, 1.00000000e+00],\n",
+       "       [4.57343848e+03, 3.09407544e+03, 1.00000000e+00],\n",
+       "       [4.57485059e+03, 2.76084741e+03, 1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b = get_homogeneous(p1, p2, len(p1))\n",
+    "a"
    ]
   },
   {
@@ -193,7 +214,7 @@
    "source": [
     "import matlab.engine\n",
     "\n",
-    "MAXITER = 100\n",
+    "MAXITER = 1\n",
     "best_inlier = 0\n",
     "best_E = None\n",
     "alpha = 5e-4\n",
@@ -215,23 +236,25 @@
     "    cur_E = np.asarray(eng.calibrated_fivepoint(a.T, b.T))\n",
     "    eng.quit()\n",
     "\n",
+    "    print(len(cur_E[0]))\n",
+    "    print(cur_E.shape[1])\n",
     "    # inlier\n",
-    "    for i in range(cur_E.shape[1]):\n",
-    "        inlier_len_temp = 0\n",
+    "    # for i in range(cur_E.shape[1]):\n",
+    "    #     inlier_len_temp = 0\n",
     "\n",
-    "        tmp = cur_E[:,i]\n",
-    "        tmp = np.reshape(tmp, [3,3])\n",
-    "        for j in range(5):\n",
-    "            estim = a[j] @ tmp @ b[j].T \n",
-    "            if estim < alpha:\n",
-    "                inlier_len_temp += 1\n",
+    "    #     tmp = cur_E[:,i]\n",
+    "    #     tmp = np.reshape(tmp, [3,3])\n",
+    "    #     for j in range(5):\n",
+    "    #         estim = a[j] @ tmp @ b[j].T \n",
+    "    #         if estim < alpha:\n",
+    "    #             inlier_len_temp += 1\n",
     "        \n",
-    "        if best_inlier < inlier_len_temp:\n",
-    "            best_inlier = inlier_len_temp\n",
-    "            best_E = tmp\n",
+    "    #     if best_inlier < inlier_len_temp:\n",
+    "    #         best_inlier = inlier_len_temp\n",
+    "    #         best_E = tmp\n",
     "\n",
-    "    print(tmp)\n",
-    "    print(best_E)\n",
+    "    # print(tmp)\n",
+    "    # print(best_E)\n",
     "\n",
     "        \n",
     "\n"
@@ -247,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.0 ('opencv_matlab_py38')",
    "language": "python",
    "name": "python3"
   },
@@ -261,12 +284,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "cc01558cfc5231bffcdc316af059f095dfbeac1d8499ffe2bcda09f240df6faa"
    }
   }
  },
