feat(pa2): til step 4

--- a/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
+++ b/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
@@ -195,19 +195,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[[ 6.72128611e-05 -5.74084019e-04 -3.43018902e-01]\n",
-      " [ 5.55371340e-04 -2.99083269e-04  6.18334720e-01]\n",
-      " [-3.19838011e-01  6.30637047e-01  1.89800275e-04]]\n",
-      "[[ 6.72128611e-05 -5.74084019e-04 -3.43018902e-01]\n",
-      " [ 5.55371340e-04 -2.99083269e-04  6.18334720e-01]\n",
-      " [-3.19838011e-01  6.30637047e-01  1.89800275e-04]]\n"
+      "Undefined function 'calibrated_fivepoint_helper' for input arguments of type\n",
+      "'double'.\n",
+      "\n",
+      "Error in calibrated_fivepoint (line 82)\n",
+      "A = calibrated_fivepoint_helper( EE ) ;\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "MatlabExecutionError",
+     "evalue": "\n  File /Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/SfM/Step2/calibrated_fivepoint.m, line 82, in calibrated_fivepoint\nUndefined function 'calibrated_fivepoint_helper' for input arguments of type 'double'.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMatlabExecutionError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb#X11sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m eng \u001b[39m=\u001b[39m matlab\u001b[39m.\u001b[39mengine\u001b[39m.\u001b[39mstart_matlab()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb#X11sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m eng\u001b[39m.\u001b[39maddpath(\u001b[39m\"\u001b[39m\u001b[39m./SfM/Step2/\u001b[39m\u001b[39m\"\u001b[39m)  \u001b[39m# 'calibrated_fivepoint.m'가 위치한 경로\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb#X11sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m cur_E \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(eng\u001b[39m.\u001b[39;49mcalibrated_fivepoint(a\u001b[39m.\u001b[39;49mT, b\u001b[39m.\u001b[39;49mT))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb#X11sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m eng\u001b[39m.\u001b[39mquit()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb#X11sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(cur_E[\u001b[39m0\u001b[39m]))\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/opencv_matlab_py38/lib/python3.8/site-packages/matlabengineforpython-9.13-py3.8.egg/matlab/engine/matlabengine.py:70\u001b[0m, in \u001b[0;36mMatlabFunc.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[39mreturn\u001b[39;00m FutureResult(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine(), future, nargs, _stdout, _stderr, feval\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     69\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 70\u001b[0m     \u001b[39mreturn\u001b[39;00m FutureResult(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine(), future, nargs, _stdout,\n\u001b[1;32m     71\u001b[0m                         _stderr, feval\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\u001b[39m.\u001b[39;49mresult()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/opencv_matlab_py38/lib/python3.8/site-packages/matlabengineforpython-9.13-py3.8.egg/matlab/engine/futureresult.py:67\u001b[0m, in \u001b[0;36mFutureResult.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     65\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(pythonengine\u001b[39m.\u001b[39mgetMessage(\u001b[39m'\u001b[39m\u001b[39mTimeoutCannotBeNegative\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m---> 67\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__future\u001b[39m.\u001b[39;49mresult(timeout)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/opencv_matlab_py38/lib/python3.8/site-packages/matlabengineforpython-9.13-py3.8.egg/matlab/engine/fevalfuture.py:82\u001b[0m, in \u001b[0;36mFevalFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m result_ready:\n\u001b[1;32m     80\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m(pythonengine\u001b[39m.\u001b[39mgetMessage(\u001b[39m'\u001b[39m\u001b[39mMatlabFunctionTimeout\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m---> 82\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_result \u001b[39m=\u001b[39m pythonengine\u001b[39m.\u001b[39;49mgetFEvalResult(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_future,\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_nargout, \u001b[39mNone\u001b[39;49;00m, out\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_out, err\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_err)\n\u001b[1;32m     83\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_retrieved \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     84\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_result\n",
+      "\u001b[0;31mMatlabExecutionError\u001b[0m: \n  File /Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/SfM/Step2/calibrated_fivepoint.m, line 82, in calibrated_fivepoint\nUndefined function 'calibrated_fivepoint_helper' for input arguments of type 'double'.\n"
      ]
     }
    ],
@@ -258,6 +272,26 @@
     "\n",
     "        \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.rand(9, 4)\n",
+    "print(len(a[0]))\n",
+    "print(a.shape[1])\n"
    ]
   },
   {
