--- a/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
+++ b/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
     "img1_drawKps = cv.drawKeypoints(img1, img1_kp, None)\n",
     "img2_drawKps = cv.drawKeypoints(img2, img2_kp, None)\n",
     "\n",
-    "# Brute force matching with k=2\n",
+    "# KNN matching with k=2\n",
     "bf = cv.BFMatcher()\n",
     "matches = bf.knnMatch(img1_des, img2_des, k=2)\n",
     "\n",
@@ -92,15 +92,12 @@
     "\n",
     "res = cv.drawMatches(img1, img1_kp, img2, img2_kp, sorted_good, img2, flags=2) \n",
     "cv.imwrite('./results/sift_bfMatcher.jpg',res)\n",
-    "print('save matches: done')\n",
-    "\n",
-    "img1_drawKps = cv.drawKeypoints(img1, img1_kp, None)\n",
-    "img2_drawKps = cv.drawKeypoints(img2, img2_kp, None)"
+    "print('save matches: done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -148,15 +145,36 @@
     "best_E = None\n",
     "\n",
     "# 5-points algorithm / RANSAC\n",
+    "# for _ in tqdm(range(MAXITER)):\n",
+    "\n",
+    "#     idx = np.random.randint(0, len(kp1), size=5)\n",
+    "#     rand_norm_q1 = norm_q1[:, idx]\n",
+    "#     rand_norm_q2 = norm_q2[:, idx]\n",
+    "#     rand_norm_q1_doub = matlab.double(rand_norm_q1.tolist())\n",
+    "#     rand_norm_q2_doub = matlab.double(rand_norm_q2.tolist())\n",
+    "    \n",
+    "#     E = eng.calibrated_fivepoint(rand_norm_q1_doub, rand_norm_q2_doub)\n",
+    "#     E = np.array(E)\n",
+    "    \n",
+    "#     for i in range(E.shape[1]):\n",
+    "#         cur_E = E[:,i].reshape(3,3)\n",
+    "        \n",
+    "#         estim = np.diag(norm_q2.T @ cur_E @ norm_q1)\n",
+    "#         cur_in = sum(np.where(((estim < threshold) & (estim >= 0)), True, False))\n",
+    "#         if best_in < cur_in:\n",
+    "#             best_in = cur_in\n",
+    "#             best_E = cur_E\n",
+    "#             inlier_idx = np.where(((estim < threshold) & (estim >= 0)))\n",
+    "\n",
     "for _ in tqdm(range(MAXITER)):\n",
     "\n",
     "    idx = np.random.randint(0, len(kp1), size=5)\n",
-    "    rand_norm_q1 = norm_q1[:, idx]\n",
-    "    rand_norm_q2 = norm_q2[:, idx]\n",
-    "    rand_norm_q1_doub = matlab.double(rand_norm_q1.tolist())\n",
-    "    rand_norm_q2_doub = matlab.double(rand_norm_q2.tolist())\n",
+    "    rand_q1 = q1[:, idx]\n",
+    "    rand_q2 = q2[:, idx]\n",
+    "    rand_q1_doub = matlab.double(rand_q1.tolist())\n",
+    "    rand_q2_doub = matlab.double(rand_q2.tolist())\n",
     "    \n",
-    "    E = eng.calibrated_fivepoint(rand_norm_q1_doub, rand_norm_q2_doub)\n",
+    "    E = eng.calibrated_fivepoint(rand_q1_doub, rand_q2_doub)\n",
     "    E = np.array(E)\n",
     "    \n",
     "    for i in range(E.shape[1]):\n",
@@ -168,7 +186,6 @@
     "            best_in = cur_in\n",
     "            best_E = cur_E\n",
     "            inlier_idx = np.where(((estim < threshold) & (estim >= 0)))\n",
-    "\n",
     "      \n",
     "print(f'# of inliers: {best_in}')\n",
     "inlier_idx = np.array(inlier_idx).reshape(-1)\n",
@@ -242,22 +259,37 @@
     "print('candidate for camera matrix\\n', P)\n",
     "\n",
     "E_init = np.append(np.eye(3), np.zeros((3,1)), axis=1)\n",
+    "# for i in range(4):\n",
+    "#     tmp = P[i]\n",
+    "#     for j in range(len(inlier_idx)):\n",
+    "#         A = np.array([\n",
+    "#             norm_q1[0,j+1]*E_init[2] - E_init[0],\n",
+    "#             norm_q1[1,j+1]*E_init[2] - E_init[1],\n",
+    "#             norm_q2[0,j+1]*tmp[2] - tmp[0],\n",
+    "#             norm_q2[1,j+1]*tmp[2] - tmp[1]])\n",
+    "#         U_A, S_A, VT_A = np.linalg.svd(A, full_matrices=True)\n",
+    "#         X = VT_A[3]#/VT_A[3,3]\n",
+    "#         if X[2] > 0 and (tmp@X.T)[2]>0:\n",
+    "#             print(f'Matrix {i} have all positive depths!')\n",
+    "#             E = P[i]\n",
+    "#             break\n",
+    "#         else:\n",
+    "#             print(f'Matrix {i} is not good')\n",
+    "#             break\n",
+    "\n",
     "for i in range(4):\n",
     "    tmp = P[i]\n",
-    "    for j in range(len(inlier_idx)):\n",
-    "        A = np.array([\n",
-    "            norm_q1[0,j+1]*E_init[2] - E_init[0],\n",
-    "            norm_q1[1,j+1]*E_init[2] - E_init[1],\n",
-    "            norm_q2[0,j+1]*tmp[2] - tmp[0],\n",
-    "            norm_q2[1,j+1]*tmp[2] - tmp[1]])\n",
-    "        U_A, S_A, VT_A = np.linalg.svd(A, full_matrices=True)\n",
-    "        X = VT_A[3]#/VT_A[3,3]\n",
-    "        if X[2] > 0 and (tmp@X.T)[2]>0:\n",
-    "            print(f'Matrix {i} have all positive depths!')\n",
-    "            E = P[i]\n",
+    "    for j in range(norm_q1.shape[1]):\n",
+    "        a = norm_q1[:,j].flatten()\n",
+    "        b = norm_q2[:,j].flatten()\n",
+    "        c = np.concatenate((a, b))\n",
+    "        d = tmp@c\n",
+    "        if np.any(d<0):\n",
+    "            print(f'Matrix {i} is not good')\n",
     "            break\n",
     "        else:\n",
-    "            print(f'Matrix {i} is not good')\n",
+    "            print(f'Matrix {i} have all positive depths!')\n",
+    "            E = P[i]\n",
     "            break\n",
     "\n",
     "inlier_X = []\n",
@@ -271,7 +303,7 @@
     "    U_A, S_A, VT_A = np.linalg.svd(A, full_matrices=True)\n",
     "    X = VT_A[:,-1]\n",
     "    inlier_X.append(X)\n",
-    "\n",
+    "    \n",
     "p3ds = np.array(inlier_X).T\n",
     "\n",
     "# visualize\n",
@@ -540,7 +572,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.0 ('opencv_matlab_py38')",
    "language": "python",
    "name": "python3"
   },
@@ -554,12 +586,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "cc01558cfc5231bffcdc316af059f095dfbeac1d8499ffe2bcda09f240df6faa"
    }
   }
  },
