feat(pa2): camera calibration construct essential matrix

--- a/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
+++ b/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
@@ -565,6 +565,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'gray' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 40>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb#X11sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m         imgpoints\u001b[39m.\u001b[39mappend(corners_tuned)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb#X11sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(objpoints)\u001b[39m==\u001b[39m\u001b[39mlen\u001b[39m(imgpoints))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/kangbeenko/Desktop/GitHub_Repository/ML_DL_Basics/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb#X11sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m retval, cameraMatrix, distCoeffs, rvecs, tvecs \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mcalibrateCamera(objpoints, imgpoints, gray\u001b[39m.\u001b[39mshape[::\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gray' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import cv2 as cv\n",
+    "import glob\n",
+    "\n",
+    "import matlab.engine\n",
+    "eng = matlab.engine.start_matlab()\n",
+    "eng.addpath(\"./SfM/Step2\")  # 'calibrated_fivepoint.m'가 위치한 경로\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "################################################################################################################################\n",
+    "# Step 7: Camera Calibration\n",
+    "################################################################################################################################\n",
+    "corner_num = (6,8)\n",
+    "objpoints = []\n",
+    "imgpoints = []\n",
+    "\n",
+    "# termination criteria\n",
+    "criteria = (2 + 1, 30, 0.001)\n",
+    "\n",
+    "objpt = np.zeros((corner_num[1]*corner_num[0],3), np.float32)\n",
+    "objpt[:,:2] = np.mgrid[0:corner_num[0],0:corner_num[1]].T.reshape(-1,2)\n",
+    "\n",
+    "images = glob.glob('./PA2_Structure_from_Motion/SfM/Step7/*.jpg')\n",
+    "\n",
+    "for fname in tqdm(images):\n",
+    "    img = cv.imread(fname)\n",
+    "    gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    ret, corners = cv.findChessboardCorners(gray, corner_num, None)\n",
+    "\n",
+    "    if ret == True:\n",
+    "        objpoints.append(objpt)\n",
+    "        corners_tuned = cv.cornerSubPix(gray,corners, (11,11), (-1,-1), criteria)\n",
+    "        imgpoints.append(corners_tuned)\n",
+    "\n",
+    "print(len(objpoints)==len(imgpoints))\n",
+    "retval, cameraMatrix, distCoeffs, rvecs, tvecs = cv.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
+    "\n",
+    "# intrinsic parameter\n",
+    "K = np.array(cameraMatrix)\n",
+    "K_inv = np.linalg.inv(K)\n",
+    "T = np.array[[0.0, -tvecs[2], tvecs[1]],\n",
+    "             [tvecs[2], 0.0, -tvecs[0],\n",
+    "              -tvecs[1], tvecs[0], 0.0]\n",
+    "             ] \n",
+    "R = rvecs\n",
+    "E = T@R\n",
+    "\n",
+    "# ################################################################################################################################\n",
+    "# # Step 1: Feature Extraction & Matching\n",
+    "# ################################################################################################################################\n",
+    "img1 = cv.imread('./SfM/Data/own/sfm_own_03.jpg')\n",
+    "img2 = cv.imread('./SfM/Data/own/sfm_own_04.jpg')\n",
+    "\n",
+    "# create SIFT instance\n",
+    "sift = cv.SIFT_create()\n",
+    "\n",
+    "# detect and compute keypoints\n",
+    "img1_kp, img1_des = sift.detectAndCompute(img1, None)\n",
+    "img2_kp, img2_des = sift.detectAndCompute(img2, None)\n",
+    "\n",
+    "# Brute-force Matching\n",
+    "bf = cv.BFMatcher()\n",
+    "matches = bf.match(img1_des,img2_des)\n",
+    " \n",
+    " \n",
+    "sorted_good = sorted(matches, key = lambda x : x.distance)\n",
+    "\n",
+    "print(f'# of matches: {len(sorted_good)}')\n",
+    "\n",
+    "# save result as image\n",
+    "img1_drawKps = cv.drawKeypoints(img1, img1_kp, None)\n",
+    "img2_drawKps = cv.drawKeypoints(img2, img2_kp, None)\n",
+    "cv.imwrite('./results/own/sift_keypoints.jpg',img1_drawKps)\n",
+    "print('save keypoints: done')\n",
+    "\n",
+    "res = cv.drawMatches(img1, img1_kp, img2, img2_kp, sorted_good, img2, flags=2) \n",
+    "cv.imwrite('./results/own/sift_bfMatcher.jpg',res)\n",
+    "print('save matches: done')\n",
+    "\n",
+    "E_init = np.append(np.eye(3), np.zeros((3,1)), axis=1)\n",
+    "inlier_X = []\n",
+    "eig = np.linalg.eig\n",
+    "eig_arr = [0,0,0,0]\n",
+    "\n",
+    "for i in range(len(inlier_idx)):\n",
+    "    A = np.array([\n",
+    "        norm_q1[0,i+1]*E_init[2].T - E_init[0].T,\n",
+    "        norm_q1[1,i+1]*E_init[2].T - E_init[1].T,\n",
+    "        norm_q2[0,i+1]*E[2].T - E[0].T,\n",
+    "        norm_q2[1,i+1]*E[2].T - E[1].T])\n",
+    "    U_A, S_A, VT_A = np.linalg.svd(A, full_matrices=True)\n",
+    "    eig_arr = eig(VT_A)[0]\n",
+    "    X = VT_A[:,np.argmax(eig_arr)]\n",
+    "\n",
+    "    inlier_X.append(X)\n",
+    "    \n",
+    "p3ds = np.array(inlier_X).T\n",
+    "\n",
+    "# visualize\n",
+    "X = np.array([])\n",
+    "Y = np.array([])\n",
+    "Z = np.array([])\n",
+    "X = np.concatenate((X, p3ds[0]))\n",
+    "Y = np.concatenate((Y, p3ds[1]))\n",
+    "Z = np.concatenate((Z, p3ds[2]))\n",
+    "\n",
+    "fig = plt.figure(figsize=(30,30))\n",
+    "ax = plt.axes(projection='3d')\n",
+    "ax.scatter3D(X, Y, Z, c='b', marker='o') \n",
+    "# plt.show()\n",
+    "plt.savefig('./results/own/3D_result.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
